fixed background curve size and spacing in footer

--- a/main.css
+++ b/main.css
@@ -109,6 +109,7 @@ a {
      width: 100%;
      height: 100%;
      background: url('./images/bg-curvy-desktop.svg') bottom no-repeat;
+     background-size: 100%;
      z-index: 1;
  }
  main {
@@ -132,9 +133,13 @@ a {
  }
 
 .stay-productive {
+    width: 90%;
+    margin: 0 auto 175px;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 175px;
+}
+.stay-productive > img {
+    width: 45%;
 }
 .stay-productive-text {
     margin-right: 8%;
@@ -269,7 +274,7 @@ footer li {
     width: 30%;
     max-width: 365px;
     position: relative;
-    top: -42px;
+    top: -52px;
 }
 .footer-container ul {
     margin-top: 285px;
@@ -288,6 +293,12 @@ footer p {
 }
 .fab {
     margin-left: 10px;
+}
+button:hover {
+    background: linear-gradient(to right, var(--cyan), var(--blue-button));
+}
+.nav-center a:hover {
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 1250px) {
@@ -358,6 +369,10 @@ footer p {
     .subscribe input, .subscribe button {
         width: 100%;
         margin: 5px auto;
+    }
+    ::placeholder {
+        padding: 0;
+        text-align: center;
     }
 }
 @media screen and (max-width: 768px) {
